--- a/dmp-client/dmp_client_gui.ui
+++ b/dmp-client/dmp_client_gui.ui
@@ -7,53 +7,97 @@
     <x>0</x>
     <y>0</y>
     <width>1280</width>
-    <height>720</height>
+    <height>745</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="DmpClientGuiSearchResults" name="search_results">
-          <property name="editTriggers">
-           <set>QAbstractItemView::NoEditTriggers</set>
-          </property>
-          <property name="selectionMode">
-           <enum>QAbstractItemView::SingleSelection</enum>
-          </property>
-          <property name="selectionBehavior">
-           <enum>QAbstractItemView::SelectRows</enum>
-          </property>
-          <attribute name="horizontalHeaderStretchLastSection">
-           <bool>true</bool>
-          </attribute>
-         </widget>
-        </item>
-        <item>
-         <widget class="QTreeView" name="playlist">
-          <property name="editTriggers">
-           <set>QAbstractItemView::NoEditTriggers</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <widget class="DmpClientGuiSearchBar" name="search_bar">
-        <property name="text">
-         <string>Default text</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-   </layout>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>0</y>
+      <width>1261</width>
+      <height>681</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <item>
+            <widget class="QToolButton" name="toolButton">
+             <property name="text">
+              <string>AddRadio</string>
+             </property>
+            </widget>
+           </item>
+           <item alignment="Qt::AlignLeft">
+            <widget class="QToolButton" name="toolButton_3">
+             <property name="text">
+              <string>DeleteRadio</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="DmpClientGuiRadioList" name="listView">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>636</width>
+             <height>16777215</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QTreeView" name="playlist">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="DmpClientGuiSearchResults" name="search_results">
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+      </widget>
+     </item>
+     <item>
+      <widget class="DmpClientGuiSearchBar" name="search_bar">
+       <property name="text">
+        <string>Default text</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="DmpClientGuiMenuBar" name="menu_bar">
    <property name="geometry">
@@ -88,7 +132,7 @@
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>false</bool>
+    <bool>true</bool>
    </attribute>
    <addaction name="separator"/>
   </widget>
@@ -126,25 +170,14 @@
    <extends>QTableView</extends>
    <header>dmp_client_gui_search_results.hpp</header>
   </customwidget>
+  <customwidget>
+   <class>DmpClientGuiRadioList</class>
+   <extends>QListView</extends>
+   <header>dmp_client_gui_radio_list.hpp</header>
+  </customwidget>
  </customwidgets>
  <resources/>
  <connections>
-  <connection>
-   <sender>search_bar</sender>
-   <signal>returnPressed()</signal>
-   <receiver>search_bar</receiver>
-   <slot>searchBarReturned()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>399</x>
-     <y>554</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>639</x>
-     <y>674</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>actionExit</sender>
    <signal>triggered()</signal>
@@ -174,6 +207,22 @@
     <hint type="destinationlabel">
      <x>639</x>
      <y>12</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>search_bar</sender>
+   <signal>returnPressed()</signal>
+   <receiver>search_bar</receiver>
+   <slot>searchBarReturned()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>399</x>
+     <y>554</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>639</x>
+     <y>674</y>
     </hint>
    </hints>
   </connection>
