--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -80,6 +80,12 @@
               <height>16777215</height>
              </size>
             </property>
+            <property name="autoFillBackground">
+             <bool>true</bool>
+            </property>
+            <property name="viewMode">
+             <enum>QListView::ListMode</enum>
+            </property>
            </widget>
           </item>
          </layout>
@@ -138,7 +144,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>19</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -171,17 +177,7 @@
    <addaction name="actionStop"/>
    <addaction name="actionPlay"/>
    <addaction name="actionNext"/>
-  </widget>
-  <widget class="QToolBar" name="toolBar_2">
-   <property name="windowTitle">
-    <string>toolBar_2</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
+   <addaction name="actionMute"/>
   </widget>
   <action name="actionExit">
    <property name="text">
@@ -229,6 +225,17 @@
    </property>
    <property name="toolTip">
     <string>Stops the radio</string>
+   </property>
+  </action>
+  <action name="actionMute">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Mute</string>
+   </property>
+   <property name="toolTip">
+    <string>Mutes the playback</string>
    </property>
   </action>
  </widget>
@@ -319,12 +326,12 @@
    <slot>searchBarReturned()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>400</x>
-     <y>719</y>
+     <x>410</x>
+     <y>712</y>
     </hint>
     <hint type="destinationlabel">
-     <x>640</x>
-     <y>719</y>
+     <x>650</x>
+     <y>712</y>
     </hint>
    </hints>
   </connection>
@@ -335,12 +342,12 @@
    <slot>cursorChanged(int,int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>640</x>
-     <y>719</y>
+     <x>650</x>
+     <y>712</y>
     </hint>
     <hint type="destinationlabel">
-     <x>640</x>
-     <y>719</y>
+     <x>650</x>
+     <y>712</y>
     </hint>
    </hints>
   </connection>
@@ -351,8 +358,8 @@
    <slot>addRadio()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>24</x>
-     <y>55</y>
+     <x>34</x>
+     <y>90</y>
     </hint>
     <hint type="destinationlabel">
      <x>140</x>
@@ -447,8 +454,8 @@
    <slot>PlayPauseToggled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>639</x>
-     <y>372</y>
+     <x>-1</x>
+     <y>-1</y>
     </hint>
     <hint type="destinationlabel">
      <x>639</x>
@@ -472,6 +479,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionMute</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>DmpClientGui</receiver>
+   <slot>MuteToggled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>639</x>
+     <y>372</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>searchBarReturned()</slot>
@@ -480,5 +503,6 @@
   <slot>StopPressed()</slot>
   <slot>PlayPauseToggled(bool)</slot>
   <slot>NextPressed()</slot>
+  <slot>MuteToggled(bool)</slot>
  </slots>
 </ui>
