--- a/qt-client/dmp_client_login_dialog.ui
+++ b/qt-client/dmp_client_login_dialog.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DmpClientConnectDialog</class>
- <widget class="QDialog" name="DmpClientConnectDialog">
+ <class>DmpClientLoginDialog</class>
+ <widget class="QDialog" name="DmpClientLoginDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>361</width>
-    <height>129</height>
+    <width>398</width>
+    <height>130</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>40</x>
      <y>90</y>
-     <width>171</width>
+     <width>341</width>
      <height>32</height>
     </rect>
    </property>
@@ -32,9 +32,9 @@
   <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>341</width>
+     <x>9</x>
+     <y>9</y>
+     <width>381</width>
      <height>71</height>
     </rect>
    </property>
@@ -42,48 +42,39 @@
     <property name="fieldGrowthPolicy">
      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
     </property>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="Username"/>
+    </item>
     <item row="1" column="0">
-     <widget class="QLabel" name="HostLabel">
+     <widget class="QLabel" name="PasswordLabel">
       <property name="text">
-       <string>Host</string>
+       <string>password</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="HostEdit">
-      <property name="placeholderText">
-       <string>The server hostname</string>
+     <widget class="QLineEdit" name="Password">
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="PortLabel">
+    <item row="0" column="0">
+     <widget class="QLabel" name="UsernameLabel">
       <property name="text">
-       <string>Port</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="PortEdit">
-      <property name="placeholderText">
-       <string>The server port</string>
+       <string>username</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
- <tabstops>
-  <tabstop>HostEdit</tabstop>
-  <tabstop>PortEdit</tabstop>
-  <tabstop>buttonBox</tabstop>
- </tabstops>
  <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>DmpClientConnectDialog</receiver>
+   <receiver>DmpClientLoginDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -99,7 +90,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>DmpClientConnectDialog</receiver>
+   <receiver>DmpClientLoginDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -112,40 +103,5 @@
     </hint>
    </hints>
   </connection>
-  <connection>
-   <sender>HostEdit</sender>
-   <signal>textChanged(QString)</signal>
-   <receiver>DmpClientConnectDialog</receiver>
-   <slot>inputChanged()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>205</x>
-     <y>63</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>180</x>
-     <y>71</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>PortEdit</sender>
-   <signal>textChanged(QString)</signal>
-   <receiver>DmpClientConnectDialog</receiver>
-   <slot>inputChanged()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>205</x>
-     <y>96</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>180</x>
-     <y>71</y>
-    </hint>
-   </hints>
-  </connection>
  </connections>
- <slots>
-  <slot>inputChanged()</slot>
- </slots>
 </ui>
