--- a/qt-client/dmp_client_login_dialog.ui
+++ b/qt-client/dmp_client_login_dialog.ui
@@ -28,6 +28,9 @@
    <property name="standardButtons">
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
+   <property name="centerButtons">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
