--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -130,14 +130,23 @@
         </item>
         <item>
          <widget class="DmpClientGuiPlaylists" name="playlists">
+          <property name="acceptDrops">
+           <bool>true</bool>
+          </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
           <property name="dragEnabled">
            <bool>true</bool>
           </property>
+          <property name="dragDropOverwriteMode">
+           <bool>false</bool>
+          </property>
           <property name="dragDropMode">
            <enum>QAbstractItemView::InternalMove</enum>
+          </property>
+          <property name="defaultDropAction">
+           <enum>Qt::IgnoreAction</enum>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
