--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -131,7 +131,7 @@
         <item>
          <widget class="DmpClientGuiPlaylists" name="playlists">
           <property name="acceptDrops">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
